refactor: utilisation isBlank et renommage variable